Refatorando código, incluindo boas práticas e melhorias no código